--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,77 @@
+autopep8==2.0.4
 blinker==1.7.0
+certifi==2023.7.22
+charset-normalizer==3.3.2
 click==8.1.7
+dill==0.3.7
+docstring-to-markdown==0.13
+filelock==3.13.1
+flake8==6.1.0
 Flask==3.0.0
+fsspec==2023.10.0
 gunicorn==21.2.0
+huggingface-hub==0.17.3
+idna==3.4
+importlib-metadata==6.8.0
+iniconfig==2.0.0
+isort==5.12.0
 itsdangerous==2.1.2
+jedi==0.19.1
 Jinja2==3.1.2
+joblib==1.3.2
 MarkupSafe==2.1.3
+mccabe==0.7.0
+mpmath==1.3.0
+networkx==3.2.1
+nltk==3.8.1
+numpy==1.26.1
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.52
+nvidia-nvtx-cu12==12.1.105
 packaging==23.2
+parso==0.8.3
+Pillow==10.1.0
+platformdirs==4.0.0
+pluggy==1.3.0
+pycodestyle==2.11.1
+pydocstyle==6.3.0
+pyflakes==3.1.0
+pylint==3.0.2
+pytest==7.4.3
+pytoolconfig==1.2.6
+PyYAML==6.0.1
+regex==2023.10.3
+requests==2.31.0
+rope==1.11.0
+safetensors==0.4.0
+scikit-learn==1.3.2
+scipy==1.11.3
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+snowballstemmer==2.2.0
+sympy==1.12
+threadpoolctl==3.2.0
+tokenizers==0.14.1
+tomli==2.0.1
+tomlkit==0.12.2
+torch==2.1.0
+torchvision==0.16.0
+tqdm==4.66.1
+transformers==4.35.0
+triton==2.1.0
+typing_extensions==4.8.0
+ujson==5.8.0
+urllib3==2.0.7
 Werkzeug==3.0.1
+whatthepatch==1.0.5
+yapf==0.40.2
+zipp==3.17.0
