--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,95 @@
+aiohttp==3.8.6
+aiosignal==1.3.1
+altair==5.1.2
+annotated-types==0.6.0
+anyio==3.7.1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+astroid==3.0.1
+asttokens==2.4.1
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.1.0
 autopep8==2.0.4
+Babel==2.13.1
+beautifulsoup4==4.12.2
+bleach==6.1.0
 blinker==1.7.0
+cachetools==5.3.2
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+comm==0.2.0
+datasets==2.14.6
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
 dill==0.3.7
+distro==1.8.0
+dnspython==2.4.2
 docstring-to-markdown==0.13
+executing==2.0.1
+fastjsonschema==2.18.1
 filelock==3.13.1
 flake8==6.1.0
 Flask==3.0.0
+fqdn==1.5.1
+frozenlist==1.4.0
 fsspec==2023.10.0
-gunicorn==21.2.0
+gitdb==4.0.11
+GitPython==3.1.40
+h11==0.14.0
+httpcore==1.0.1
+httpx==0.25.1
 huggingface-hub==0.17.3
 idna==3.4
 importlib-metadata==6.8.0
 iniconfig==2.0.0
+ipykernel==6.26.0
+ipython==8.17.2
+ipywidgets==8.1.1
+isoduration==20.11.0
 isort==5.12.0
 itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.19.2
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.9.0
+jupyter-lsp==2.2.0
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+jupyter_server==2.10.0
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.8
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.9
+jupyterlab_server==2.25.0
+loguru==0.7.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
 mccabe==0.7.0
+mdurl==0.1.2
+mistune==3.0.2
 mpmath==1.3.0
+multidict==6.0.4
+multiprocess==0.70.15
+nbclient==0.9.0
+nbconvert==7.11.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
 networkx==3.2.1
 nltk==3.8.1
+notebook==7.0.6
+notebook_shim==0.2.3
 numpy==1.26.1
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
@@ -37,41 +103,101 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.18.1
 nvidia-nvjitlink-cu12==12.3.52
 nvidia-nvtx-cu12==12.1.105
+openai==1.1.1
+overrides==7.4.0
 packaging==23.2
+pandas==2.1.2
+pandocfilters==1.5.0
 parso==0.8.3
+pexpect==4.8.0
 Pillow==10.1.0
-platformdirs==4.0.0
+pinecone-client==2.2.4
+platformdirs==3.11.0
 pluggy==1.3.0
+prometheus-client==0.18.0
+prompt-toolkit==3.0.39
+protobuf==4.25.0
+psutil==5.9.6
+psycopg2==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==14.0.0
 pycodestyle==2.11.1
+pycparser==2.21
+pydantic==2.4.2
+pydantic_core==2.10.1
+pydeck==0.8.1b0
 pydocstyle==6.3.0
 pyflakes==3.1.0
+Pygments==2.16.1
 pylint==3.0.2
+PyPDF2==3.0.1
 pytest==7.4.3
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+python-lsp-jsonrpc==1.1.2
+python-lsp-server==1.9.0
 pytoolconfig==1.2.6
+pytz==2023.3.post1
 PyYAML==6.0.1
+pyzmq==25.1.1
+qtconsole==5.5.0
+QtPy==2.4.1
+referencing==0.30.2
 regex==2023.10.3
 requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.6.0
 rope==1.11.0
+rpds-py==0.12.0
 safetensors==0.4.0
 scikit-learn==1.3.2
 scipy==1.11.3
+Send2Trash==1.8.2
 sentence-transformers==2.2.2
 sentencepiece==0.1.99
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
 snowballstemmer==2.2.0
+soupsieve==2.5
+stack-data==0.6.3
+streamlit==1.28.1
 sympy==1.12
+tenacity==8.2.3
+terminado==0.17.1
 threadpoolctl==3.2.0
+tinycss2==1.2.1
 tokenizers==0.14.1
+toml==0.10.2
 tomli==2.0.1
 tomlkit==0.12.2
+toolz==0.12.0
 torch==2.1.0
 torchvision==0.16.0
+tornado==6.3.3
 tqdm==4.66.1
+traitlets==5.13.0
 transformers==4.35.0
 triton==2.1.0
+types-python-dateutil==2.8.19.14
 typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
 ujson==5.8.0
+uri-template==1.3.0
 urllib3==2.0.7
+validators==0.22.0
+watchdog==3.0.0
+wcwidth==0.2.9
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.4
 Werkzeug==3.0.1
 whatthepatch==1.0.5
+widgetsnbextension==4.0.9
+xxhash==3.4.1
 yapf==0.40.2
+yarl==1.9.2
 zipp==3.17.0
