--- a/requirements.txt
+++ b/requirements.txt
@@ -118,7 +118,7 @@ prometheus-client==0.18.0
 prompt-toolkit==3.0.39
 protobuf==4.25.0
 psutil==5.9.6
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==14.0.0
