--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ frozenlist==1.4.0
 fsspec==2023.10.0
 gitdb==4.0.11
 GitPython==3.1.40
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==1.0.1
 httpx==0.25.1
